@@ -1,7 +1,6 @@
 package com.example.pfegestionsportive.Config;
 
 import com.example.pfegestionsportive.Security.JwtFilter;
-import com.example.pfegestionsportive.Security.UserDetailsServiceImpl;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -16,10 +15,9 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -29,75 +27,114 @@ import java.util.List;
 public class SecurityConfig {
 
     private final JwtFilter jwtFilter;
-    private final UserDetailsServiceImpl userDetailsService;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
                 .authorizeHttpRequests(auth -> auth
 
-                        // ── Public ──
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/public/**").permitAll()
-                        .requestMatchers("/api/chat/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/shop/produits").permitAll()
+                        // ───────── CORS PREFLIGHT — TOUJOURS EN PREMIER ─────────
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // ── Injury Prevention IA ──
-                        .requestMatchers("/api/injury-prevention/**").permitAll()
+                        // ───────── PUBLIC ─────────
+                        .requestMatchers(
+                                "/api/auth/**",
+                                "/api/public/**"
+                        ).permitAll()
 
-                        // ── Clubs & Matches (lecture) ──
-                        .requestMatchers(HttpMethod.GET, "/api/federation/clubs").hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN", "FAN")
-                        .requestMatchers(HttpMethod.GET, "/api/federation/clubs/**").hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN", "FAN")
-                        .requestMatchers(HttpMethod.GET, "/api/matches").hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN", "FAN")
-                        .requestMatchers(HttpMethod.GET, "/api/matches/**").hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN", "FAN")
+                        // ───────── SUPER ADMIN ─────────
+                        .requestMatchers("/api/super-admin/**")
+                        .hasAnyRole("SUPER_ADMIN")
 
-                        // ── Super Admin ──
-                        .requestMatchers("/api/superadmin/**").hasRole("SUPER_ADMIN")
+                        // ───────── JOUEURS ─────────
+                        .requestMatchers(HttpMethod.GET,    "/api/joueurs/**")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN", "FAN")
+                        .requestMatchers(HttpMethod.POST,   "/api/joueurs/**")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN")
+                        .requestMatchers(HttpMethod.PUT,    "/api/joueurs/**")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/joueurs/**")
+                        .hasAnyRole("SUPER_ADMIN")
 
-                        // ── Federation ──
-                        .requestMatchers("/api/federation/**").hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN")
+                        // ───────── LICENCES ─────────
+                        .requestMatchers(HttpMethod.GET,   "/api/licences/mon-club")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN")
+                        .requestMatchers(HttpMethod.POST,  "/api/licences")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN")
+                        .requestMatchers(HttpMethod.POST,  "/api/licences/admin")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN")
+                        .requestMatchers(HttpMethod.GET,   "/api/licences/**")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN")
+                        .requestMatchers(HttpMethod.PATCH, "/api/licences/**")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN")
 
-                        // ── Club Admin ──
-                        .requestMatchers("/api/club-admin/**").hasAnyRole("SUPER_ADMIN", "CLUB_ADMIN", "FEDERATION_ADMIN")
+                        // ───────── FEDERATION ─────────
+                        .requestMatchers("/api/federation/**")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN")
 
-                        // ── Club ──
-                        .requestMatchers("/api/club/**").hasAnyRole("SUPER_ADMIN", "CLUB_ADMIN")
+                        // ───────── CLUB ADMIN ─────────
+                        .requestMatchers("/api/club-admin/**")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN")
+                        .requestMatchers("/api/club/**")
+                        .hasAnyRole("SUPER_ADMIN", "CLUB_ADMIN")
 
-                        // ── Fan ──
-                        .requestMatchers("/api/fan/**").hasAnyRole("FAN", "SUPER_ADMIN")
+                        // ───────── FAN ─────────
+                        .requestMatchers("/api/fan/**")
+                        .hasAnyRole("FAN", "SUPER_ADMIN")
 
-                        // ── Shop ──
-                        .requestMatchers("/api/shop/**").hasAnyRole("FAN", "SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN")
+                        // ───────── USERS ─────────
+                        .requestMatchers("/api/users/**")
+                        .hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN", "CLUB_ADMIN", "FAN")
 
-                        // ── Matches (écriture) ──
-                        .requestMatchers("/api/matches/**").hasAnyRole("SUPER_ADMIN", "FEDERATION_ADMIN")
-
+                        // 🔒 TOUT LE RESTE
                         .anyRequest().authenticated()
                 )
-                .sessionManagement(s -> s
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(jwtFilter,
-                        UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+
+        config.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "http://127.0.0.1:5173"
+        ));
+
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Cache-Control",
+                "Accept",
+                "Origin",
+                "X-Requested-With",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+
+        config.setExposedHeaders(List.of("Authorization"));
         config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
     }
 
     @Bean
-    public AuthenticationManager authManager(AuthenticationConfiguration config)
-            throws Exception {
+    public AuthenticationManager authManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
